# toci

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  makefile  nob.c
src/: CMakeLists.txt  common.h  main.c  todo.c  todo.h
test/: todo.txt
vendors/: CMakeLists.txt
vendors/glm/: CMakeLists.txt
vendors/sdl/: CMakeLists.txt
vendors/sdl_image/: CMakeLists.txt
vendors/sdl_mixer/: CMakeLists.txt
vendors/sdl_ttf/: CMakeLists.txt
vendors/tinyxml2/: CMakeLists.txt
